--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "mysql2": "^3.6.5",
-    "next-auth": "^4.24.5",
     "bcryptjs": "^2.4.3",
     "formidable": "^3.5.1",
-    "uuid": "^9.0.1",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "mysql2": "^3.6.5",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
-    "@types/bcryptjs": "^2.4.6",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.3.6",
+    "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   }
 }
